log
Fri 12 Aug 2022 12:39:56 PM UTC: 
 tests:  0|7
total_score: 0/70
e073ba3
Fri 12 Aug 2022 12:48:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
100c8a9
Fri 12 Aug 2022 12:55:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:17: error: expected expression before ‘]’ token
   40 | *suma = sumaN(a[], m);
      |                 ^
Compilation failed
7c83d11
Fri 12 Aug 2022 12:56:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
7e2a99e
Fri 12 Aug 2022 12:58:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:40:15: error: passing argument 1 of ‘sumaN’ makes pointer from integer without a cast [-Werror=int-conversion]
   40 | *suma = sumaN(*a, m);
      |               ^~
      |               |
      |               int
exercises.c:21:15: note: expected ‘int *’ but argument is of type ‘int’
   21 | int sumaN(int a[], int N) {
      |           ~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
7174d2f
Fri 12 Aug 2022 12:58:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
84acf58
Fri 12 Aug 2022 01:09:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
889f5fd
